--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,8 +1,17 @@
 {
   "name": "@itsrakesh/tsconfig",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "private": true,
   "license": "MIT",
+  "description": "A shared tsconfig.json for itsrakesh",
+  "files": [
+    "base.json",
+    "react-library.json",
+    "node16.json"
+  ],
+  "peerDependencies": {
+    "typescript": "5.x"
+  },
   "publishConfig": {
     "access": "public"
   }
