--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@changesets/cli": "^2.26.2",
     "eslint": "^8.48.0",
     "@itsrakesh/eslint-config": "workspace:*",
+    "@itsrakesh/tsconfig": "workspace:*",
     "prettier": "^3.0.3",
     "turbo": "latest"
   },
