--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-config-turbo": "latest",
+    "eslint-plugin-mdx": "^2.2.0",
     "eslint-plugin-react": "7.33.2",
-    "eslint-config-turbo": "latest"
+    "eslint-plugin-storybook": "^0.6.13"
   },
   "publishConfig": {
     "access": "public"
