--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build && changeset publish"
+    "release": "turbo run build && changeset publish",
+    "sb": "turbo run sb --filter=@itsrakesh/ui",
+    "sb:build": "turbo run build-sb --filter=@itsrakesh/ui",
+    "sb:preview": "turbo run preview-sb --filter=@itsrakesh/ui"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
