--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,14 +1,45 @@
 {
   "name": "@itsrakesh/ui",
   "version": "0.2.0",
+  "description": "React UI components for itsrakesh projects.",
+  "keywords": [
+    "itsrakesh",
+    "ui",
+    "react"
+  ],
+  "homepage": "https://github.com/itsrakeshhq/itsrakesh/tree/main/packages/ui#readme",
+  "bugs": {
+    "url": "https://github.com/itsrakeshhq/itsrakesh/issues",
+    "email": "rakesh@itsrakesh.com"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "Rakesh Potnuru",
+    "email": "rakesh@itsrakesh.com",
+    "url": "https://itsrakesh.com"
+  },
+  "funding": [
+    {
+      "type": "individual",
+      "url": "https://github.com/sponsors/RakeshPotnuru"
+    },
+    {
+      "type": "individual",
+      "url": "https://ko-fi.com/itsrakesh"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/itsrakeshhq/itsrakesh.git",
+    "directory": "packages/ui"
+  },
+  "files": [
+    "dist/**"
+  ],
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "sideEffects": false,
-  "license": "MIT",
-  "files": [
-    "dist/**"
-  ],
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --external react",
     "dev": "tsup src/index.ts --format esm,cjs --watch --dts --external react",
@@ -22,6 +53,7 @@
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
+    "@hookform/resolvers": "^3.3.1",
     "@itsrakesh/eslint-config": "workspace:*",
     "@itsrakesh/tsconfig": "workspace:*",
     "@itsrakesh/utils": "workspace:*",
@@ -44,15 +76,27 @@
     "storybook": "^7.4.0",
     "tailwindcss": "^3.3.3",
     "tsup": "^7.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "zod": "^3.22.2"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.4",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^1.14.0",
+    "react-hook-form": "^7.46.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "peerDependencies": {
