--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -13,6 +13,10 @@ jobs:
   deploy-storybook:
     name: Deploy Storybook
     runs-on: ubuntu-latest
+    env:
+      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+      TURBO_TEAM: ${{ vars.TURBO_TEAM }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -28,7 +32,7 @@ jobs:
           node-version: 18.x
 
       - name: Install Dependencies
-        run: cd packages/ui && pnpm i
+        run: pnpm i
 
       - name: Build
         run: pnpm sb:build
