--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -88,7 +88,7 @@
     "zod": "^3.22.2"
   },
   "dependencies": {
-    "@itsrakesh/utils": "workspace:*",
+    "@itsrakesh/utils": "workspace:^",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.3",
