--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -104,6 +104,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "react-hook-form": "^7.46.1",
     "tailwindcss-animate": "^1.0.7"
