--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -108,9 +108,12 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
+    "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.46.1",
     "tailwindcss-animate": "^1.0.7"
   },
