--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -8,15 +8,14 @@ on:
       - "packages/ui/**"
       - "!packages/ui/**/*.md"
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
-
 jobs:
   deploy-storybook:
     name: Deploy Storybook
     runs-on: ubuntu-latest
-    env:
-      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-      TURBO_TEAM: ${{ vars.TURBO_TEAM }}
+    permissions:
+      contents: write
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
 
     steps:
       - name: Checkout
