--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -89,6 +89,7 @@
   },
   "dependencies": {
     "@itsrakesh/utils": "workspace:^",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.3",
