--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -6,39 +6,22 @@ on:
       - main
     paths:
       - "packages/ui/**"
-      - "!packages/ui/**/*.md"
 
 jobs:
-  deploy-storybook:
-    name: Deploy Storybook
+  deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
+      - name: Install dependencies and build Storybook
+        run: |
+          npm install
+          npm run sb:build
 
-      - name: Setup Node.js 18.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
-
-      - name: Install Dependencies
-        run: pnpm i
-
-      - name: Build
-        run: pnpm sb:build
-
-      - name: Deploy
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: packages/ui/storybook-static
+          deploy_key: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: "packages/ui/storybook-static"
