--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -116,6 +116,8 @@
     "date-fns": "^2.30.0",
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.46.1",
+    "react-resizable-panels": "^1.0.7",
+    "sonner": "^1.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "peerDependencies": {
