--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build && changeset publish",
-    "sb": "turbo run sb --filter=@itsrakesh/ui",
-    "sb:build": "turbo run build-sb --filter=@itsrakesh/ui"
+    "release": "turbo run build && changeset publish"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
@@ -20,5 +18,13 @@
     "prettier": "^3.0.3",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@8.6.10"
+  "pnpm": {
+    "overrides": {
+      "react-docgen-typescript": "2.2.2"
+    }
+  },
+  "resolutions": {
+    "react-docgen-typescript": "2.2.2"
+  },
+  "packageManager": "pnpm@8.15.3"
 }
