--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -50,13 +50,12 @@
   },
   "scripts": {
     "build": "tsup",
-    "dev": "tsup --watch",
+    "dev": "next dev",
+    "nextra:build": "next build",
+    "start": "next start",
     "lint": "eslint \"src/**/*.ts*\"",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
-    "check-types": "tsc --noEmit",
-    "sb": "storybook dev -p 6006",
-    "build-sb": "storybook build",
-    "preview-sb": "serve storybook-static"
+    "check-types": "tsc --noEmit"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
@@ -65,15 +64,6 @@
     "@hookform/resolvers": "^3.3.1",
     "@itsrakesh/eslint-config": "workspace:*",
     "@itsrakesh/tsconfig": "workspace:*",
-    "@storybook/addon-essentials": "^7.4.0",
-    "@storybook/addon-interactions": "^7.4.0",
-    "@storybook/addon-links": "^7.4.0",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/addon-styling": "^1.3.7",
-    "@storybook/blocks": "^7.4.0",
-    "@storybook/react": "^7.4.0",
-    "@storybook/react-webpack5": "^7.4.0",
-    "@storybook/testing-library": "^0.2.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.15",
@@ -81,11 +71,13 @@
     "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.4.0",
     "tailwindcss": "^3.3.3",
-    "tsup": "^7.2.0",
+    "tsup": "^8.0.2",
     "typescript": "^5.2.2",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "next": "^14.1.4",
+    "nextra": "^2.13.4",
+    "nextra-theme-docs": "^2.13.4"
   },
   "dependencies": {
     "@itsrakesh/utils": "workspace:^",
