--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build && changeset publish"
+    "release": "turbo run build && changeset publish",
+    "nextra:build": "turbo run nextra:build --filter=@itsrakesh/ui"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
