--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -68,16 +68,16 @@
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.48.0",
+    "next": "^14.1.4",
+    "nextra": "^2.13.4",
+    "nextra-theme-docs": "^2.13.4",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
     "tsup": "^8.0.2",
     "typescript": "^5.2.2",
-    "zod": "^3.22.2",
-    "next": "^14.1.4",
-    "nextra": "^2.13.4",
-    "nextra-theme-docs": "^2.13.4"
+    "zod": "^3.22.2"
   },
   "dependencies": {
     "@itsrakesh/utils": "workspace:^",
@@ -109,6 +109,7 @@
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.46.1",
     "react-resizable-panels": "^1.0.7",
+    "recharts": "^2.12.7",
     "sonner": "^1.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
