--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -49,7 +49,7 @@
     "./globals.css": "./dist/index.css"
   },
   "scripts": {
-    "build": "tsup",
+    "build": "NODE_OPTIONS='--max-old-space-size=16384' tsup",
     "dev": "next dev",
     "nextra:build": "next build",
     "start": "next start",
@@ -75,7 +75,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
-    "tsup": "^8.0.2",
+    "tsup": "^8.2.4",
     "typescript": "^5.2.2",
     "zod": "^3.22.2"
   },
