--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+      - name: Setup Node.js 20
+        uses: actions/setup-node@v3
         with:
-          version: 8
+          node-version: 20
 
       - name: Setup Node.js 18.x
         uses: actions/setup-node@v3
