--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -74,7 +74,7 @@
     "postcss": "^8.4.29",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.9",
     "tsup": "^8.2.4",
     "typescript": "^5.2.2",
     "zod": "^3.22.2"
@@ -104,6 +104,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "react-day-picker": "^8.9.1",
@@ -111,6 +112,7 @@
     "react-resizable-panels": "^1.0.7",
     "recharts": "^2.12.7",
     "sonner": "^1.3.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "peerDependencies": {
